Initial contents, structure and comments.

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,17 @@
-theme: jekyll-theme-slate
+title: Andrej Ivašković
+email: andrej.ivaskovic@cst.cam.ac.uk
+baseurl: ""
+github_username:  Dreian
+
+markdown: kramdown
+theme: minima
+plugins:
+  - jekyll-feed
+
+# Disqus Comments
+disqus:
+    # Leave shortname blank to disable comments site-wide.
+    # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+    shortname: dreian-github-io
+
+url: "https://dreian.github.io"
